[gd_scene load_steps=74 format=3 uid="uid://bu74mh3w11qc7"]

[ext_resource type="Script" uid="uid://bbeko81fsvtml" path="res://Scenes/Characters/scripts/player._controllergd.gd" id="1_7b05h"]
[ext_resource type="PackedScene" uid="uid://cq73hl15tgv8r" path="res://assets/character/LeoModelIndy.glb" id="2_qkgjm"]
[ext_resource type="Script" uid="uid://bpb52qrq3dcum" path="res://Scenes/Characters/scripts/camera_manager.gd" id="8_b4kmf"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="9_shd1k"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="10_5kd0c"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="11_aal88"]
[ext_resource type="Script" uid="uid://b8hhnqsugykly" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="12_shd1k"]
[ext_resource type="Script" uid="uid://bmxkpnp3bb6vd" path="res://Scenes/Characters/scripts/active.gd" id="45_6iudy"]
[ext_resource type="Script" uid="uid://ctq48ecvumfpo" path="res://Scenes/Characters/scripts/animation_tree.gd" id="45_24667"]
[ext_resource type="Script" uid="uid://naa8xocjne40" path="res://Scenes/Characters/scripts/inactive.gd" id="46_24667"]
[ext_resource type="Script" uid="uid://d2c6jjx1bhu72" path="res://Scenes/Characters/scripts/fall.gd" id="47_6qet4"]
[ext_resource type="Script" uid="uid://njw7klxx1wd4" path="res://Scenes/Characters/scripts/aim.gd" id="48_tl32u"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0el0d"]
radius = 0.24365234
height = 1.9189453

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oyggo"]
animation = &"fallALandtoStand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_35l00"]
animation = &"fall_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6qet4"]
xfade_time = 0.2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tl32u"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a2v5d"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_73iip"]
states/Start/position = Vector2(249.33333, 98.666664)
states/fall/node = SubResource("AnimationNodeAnimation_35l00")
states/fall/position = Vector2(437.3333, 75.333336)
"states/fall to land/node" = SubResource("AnimationNodeAnimation_oyggo")
"states/fall to land/position" = Vector2(713.3333, 74)
transitions = ["Start", "fall", SubResource("AnimationNodeStateMachineTransition_6qet4"), "fall", "fall to land", SubResource("AnimationNodeStateMachineTransition_tl32u"), "fall to land", "End", SubResource("AnimationNodeStateMachineTransition_a2v5d")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65jth"]
animation = &"StandingReactSmallFromHead"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_73iip"]
filter_enabled = true
filters = ["%GeneralSkeleton:Chest", "%GeneralSkeleton:Head", "%GeneralSkeleton:LeftHand", "%GeneralSkeleton:LeftIndexDistal", "%GeneralSkeleton:LeftIndexIntermediate", "%GeneralSkeleton:LeftIndexProximal", "%GeneralSkeleton:LeftLowerArm", "%GeneralSkeleton:LeftShoulder", "%GeneralSkeleton:LeftUpperArm", "%GeneralSkeleton:Neck", "%GeneralSkeleton:RightHand", "%GeneralSkeleton:RightIndexDistal", "%GeneralSkeleton:RightIndexIntermediate", "%GeneralSkeleton:RightIndexProximal", "%GeneralSkeleton:RightLowerArm", "%GeneralSkeleton:RightShoulder", "%GeneralSkeleton:RightUpperArm", "%GeneralSkeleton:Spine", "%GeneralSkeleton:UpperChest", "%GeneralSkeleton:mixamorig_LeftHandIndex1", "%GeneralSkeleton:mixamorig_RightHandIndex1"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6iudy"]
animation = &"StandingDrawArrow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7b05h"]
animation = &"StandingAimRecoil"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wykft"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5e6qr"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_al2mk"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vr30g"]
states/draw/node = SubResource("AnimationNodeAnimation_6iudy")
states/draw/position = Vector2(421.33334, 74.888885)
states/release/node = SubResource("AnimationNodeAnimation_7b05h")
states/release/position = Vector2(676, 74)
transitions = ["Start", "draw", SubResource("AnimationNodeStateMachineTransition_wykft"), "draw", "release", SubResource("AnimationNodeStateMachineTransition_5e6qr"), "release", "End", SubResource("AnimationNodeStateMachineTransition_al2mk")]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_7lwex"]
input_0/name = "dodge"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "react"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_rwhey"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_24667"]
animation = &"StandingDodgeBak"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6qet4"]
animation = &"StandingDiveForward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tl32u"]
animation = &"StandingDodgeLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2v5d"]
animation = &"StandingDodgeRight"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vr30g"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rqf5a"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k5xgo"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_batec"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wu574"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fh2un"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fkh6d"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m7j76"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hpvre"]
"states/dodge back/node" = SubResource("AnimationNodeAnimation_24667")
"states/dodge back/position" = Vector2(509.33334, 167.33334)
"states/dodge front/node" = SubResource("AnimationNodeAnimation_6qet4")
"states/dodge front/position" = Vector2(516, 68.666664)
"states/dodge left/node" = SubResource("AnimationNodeAnimation_tl32u")
"states/dodge left/position" = Vector2(517.5321, 252.66666)
"states/dodge right/node" = SubResource("AnimationNodeAnimation_a2v5d")
"states/dodge right/position" = Vector2(513.1051, 362.66666)
transitions = ["Start", "dodge front", SubResource("AnimationNodeStateMachineTransition_vr30g"), "dodge front", "End", SubResource("AnimationNodeStateMachineTransition_rqf5a"), "Start", "dodge back", SubResource("AnimationNodeStateMachineTransition_k5xgo"), "dodge back", "End", SubResource("AnimationNodeStateMachineTransition_batec"), "Start", "dodge left", SubResource("AnimationNodeStateMachineTransition_wu574"), "dodge left", "End", SubResource("AnimationNodeStateMachineTransition_fh2un"), "Start", "dodge right", SubResource("AnimationNodeStateMachineTransition_fkh6d"), "dodge right", "End", SubResource("AnimationNodeStateMachineTransition_m7j76")]
graph_offset = Vector2(-30.263031, 34)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_isiif"]
animation = &"standing idle 01"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xek5f"]
animation = &"standing walk forward"
use_custom_timeline = true
timeline_length = 1.23
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_81mt5"]
animation = &"standing walk right"
use_custom_timeline = true
timeline_length = 1.23
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qekyy"]
animation = &"standing walk back"
use_custom_timeline = true
timeline_length = 1.23
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hjmw"]
animation = &"standing walk left"
use_custom_timeline = true
timeline_length = 1.23
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ynkr0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_isiif")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_xek5f")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_81mt5")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_qekyy")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_8hjmw")
blend_point_4/pos = Vector2(-1, 0)
sync = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o5en2"]
graph_offset = Vector2(-686.60455, 51.475586)
nodes/output/position = Vector2(986.6667, 26.666666)
nodes/movement/node = SubResource("AnimationNodeBlendSpace2D_ynkr0")
nodes/movement/position = Vector2(-400, 80)
"nodes/aim os/node" = SubResource("AnimationNodeOneShot_73iip")
"nodes/aim os/position" = Vector2(586.6667, 53.333332)
"nodes/aim sm/node" = SubResource("AnimationNodeStateMachine_vr30g")
"nodes/aim sm/position" = Vector2(213.33333, 320)
"nodes/dodge os/node" = SubResource("AnimationNodeOneShot_rwhey")
"nodes/dodge os/position" = Vector2(53.333332, 53.333332)
"nodes/dodge sm/node" = SubResource("AnimationNodeStateMachine_hpvre")
"nodes/dodge sm/position" = Vector2(-693.3333, 426.66666)
"nodes/d_r transition/node" = SubResource("AnimationNodeTransition_7lwex")
"nodes/d_r transition/position" = Vector2(-293.33334, 373.33334)
nodes/Animation/node = SubResource("AnimationNodeAnimation_65jth")
nodes/Animation/position = Vector2(-666.6667, 640)
node_connections = [&"output", 0, &"aim os", &"aim os", 0, &"dodge os", &"aim os", 1, &"aim sm", &"dodge os", 0, &"movement", &"dodge os", 1, &"d_r transition", &"d_r transition", 0, &"dodge sm", &"d_r transition", 1, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_73iip"]
animation = &"FallToRoll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rwhey"]
animation = &"floating"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pt5g6"]
xfade_time = 0.2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7b05h"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6iudy"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_rwhey"]
states/fall/node = SubResource("AnimationNodeAnimation_rwhey")
states/fall/position = Vector2(401.33334, 90)
"states/fall to land/node" = SubResource("AnimationNodeAnimation_73iip")
"states/fall to land/position" = Vector2(642.6666, 83.33333)
transitions = ["Start", "fall", SubResource("AnimationNodeStateMachineTransition_pt5g6"), "fall", "fall to land", SubResource("AnimationNodeStateMachineTransition_7b05h"), "fall to land", "End", SubResource("AnimationNodeStateMachineTransition_6iudy")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7pt4t"]
animation = &"unarmed idle 01"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7lwex"]
animation = &"Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qkgjm"]
animation = &"Slow Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_b4kmf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7pt4t")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_7lwex")
blend_point_1/pos = 0.0
blend_point_2/node = SubResource("AnimationNodeAnimation_qkgjm")
blend_point_2/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_shd1k"]
nodes/output/position = Vector2(666.6667, 80)
nodes/movement/node = SubResource("AnimationNodeBlendSpace1D_b4kmf")
nodes/movement/position = Vector2(186.66667, 80)
node_connections = [&"output", 0, &"movement"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt5g6"]
animation = &"standing equip bow"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5kd0c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oyggo"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_35l00"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_24667"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_73iip"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_65jth"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7lwex"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_akdbc"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_toai8"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6iudy"]
states/ACTIVE/node = SubResource("AnimationNodeBlendTree_o5en2")
states/ACTIVE/position = Vector2(739.55554, 67.77777)
"states/ACTIVE FALL/node" = SubResource("AnimationNodeStateMachine_73iip")
"states/ACTIVE FALL/position" = Vector2(740, 168.66667)
states/INACTIVE/node = SubResource("AnimationNodeBlendTree_shd1k")
states/INACTIVE/position = Vector2(296, 81.35803)
"states/INACTIVE FALL/node" = SubResource("AnimationNodeStateMachine_rwhey")
"states/INACTIVE FALL/position" = Vector2(288, 178.24692)
states/Start/position = Vector2(101.333336, 80.24692)
"states/de_equip bow/node" = SubResource("AnimationNodeAnimation_pt5g6")
"states/de_equip bow/position" = Vector2(512, 67.58024)
transitions = ["Start", "INACTIVE", SubResource("AnimationNodeStateMachineTransition_5kd0c"), "INACTIVE", "INACTIVE FALL", SubResource("AnimationNodeStateMachineTransition_oyggo"), "ACTIVE", "ACTIVE FALL", SubResource("AnimationNodeStateMachineTransition_35l00"), "INACTIVE FALL", "INACTIVE", SubResource("AnimationNodeStateMachineTransition_24667"), "ACTIVE FALL", "ACTIVE", SubResource("AnimationNodeStateMachineTransition_73iip"), "INACTIVE", "de_equip bow", SubResource("AnimationNodeStateMachineTransition_65jth"), "de_equip bow", "ACTIVE", SubResource("AnimationNodeStateMachineTransition_7lwex"), "ACTIVE", "de_equip bow", SubResource("AnimationNodeStateMachineTransition_akdbc"), "de_equip bow", "INACTIVE", SubResource("AnimationNodeStateMachineTransition_toai8")]

[sub_resource type="Resource" id="Resource_4opfx"]
script = ExtResource("11_aal88")

[sub_resource type="Resource" id="Resource_5kd0c"]
script = ExtResource("12_shd1k")
metadata/_custom_type_script = "uid://b8hhnqsugykly"

[node name="Indy" type="CharacterBody3D" node_paths=PackedStringArray("INACTIVE", "ACTIVE", "AIM", "FALL", "limbo_state")]
script = ExtResource("1_7b05h")
INACTIVE = NodePath("LimboHSM/INACTIVE")
ACTIVE = NodePath("LimboHSM/ACTIVE")
AIM = NodePath("LimboHSM/AIM")
FALL = NodePath("LimboHSM/FALL")
limbo_state = NodePath("LimboHSM")

[node name="LeoModelIndy" parent="." instance=ExtResource("2_qkgjm")]

[node name="GeneralSkeleton" parent="LeoModelIndy/Armature_006" index="0"]
bones/0/position = Vector3(0.012750626, -5.659225e-10, -0.004747302)
bones/1/position = Vector3(0.0003828049, 0.7644611, -0.009294856)
bones/1/rotation = Quaternion(-0.004652803, 0.00030105526, -0.023669062, 0.999709)
bones/2/rotation = Quaternion(0.006487724, -0.0127343545, 0.005067764, 0.9998851)
bones/3/rotation = Quaternion(0.010269887, -0.001157252, 0.022793913, 0.9996868)
bones/4/rotation = Quaternion(0.010457269, 0.004150393, 0.022841275, 0.99967587)
bones/5/rotation = Quaternion(0.008278892, -0.006013055, -0.0018338615, 0.99994606)
bones/6/rotation = Quaternion(0.015575984, 0.0065394053, -0.046238784, 0.9987876)
bones/8/rotation = Quaternion(0.49638554, 0.49574527, 0.5099288, -0.49780583)
bones/9/rotation = Quaternion(0.16102535, 0.7791483, -0.58646166, -0.15186016)
bones/10/rotation = Quaternion(0.11117651, -0.6838123, 0.1144552, 0.7119977)
bones/11/rotation = Quaternion(-0.032309175, 0.5186934, -0.0031207989, 0.85434395)
bones/12/rotation = Quaternion(-0.23634028, 0.7876375, 0.08367754, 0.56282204)
bones/13/rotation = Quaternion(0.26167795, -0.06297158, 0.10968148, 0.95683295)
bones/13/scale = Vector3(1.0000123, 0.9999885, 0.99999815)
bones/14/rotation = Quaternion(0.031466488, -0.06679007, 0.020325724, 0.99706364)
bones/14/scale = Vector3(1.0000196, 0.9999823, 0.9999972)
bones/16/rotation = Quaternion(0.126476, 0.026733458, -0.04605149, 0.99053943)
bones/17/rotation = Quaternion(0.22286698, -0.00853031, -0.033419795, 0.9742386)
bones/18/rotation = Quaternion(0.18780181, -0.0058033196, -0.057566874, 0.98050135)
bones/20/rotation = Quaternion(0.1773161, -0.026433457, -0.06365151, 0.9817376)
bones/21/rotation = Quaternion(0.29409468, -0.015451897, -0.06400673, 0.9535055)
bones/22/rotation = Quaternion(0.17108004, -0.011064624, -0.02616257, 0.98484766)
bones/24/rotation = Quaternion(0.16606681, -0.0672719, -0.06722128, 0.98151803)
bones/25/rotation = Quaternion(0.3509434, 0.016289314, -0.057320535, 0.93449867)
bones/26/rotation = Quaternion(0.2073814, 0.0118093, -0.04442171, 0.97717977)
bones/28/rotation = Quaternion(0.21758646, -0.18010211, -0.09476091, 0.9545888)
bones/29/rotation = Quaternion(0.36577353, -0.06357284, -0.07150442, 0.9257728)
bones/30/rotation = Quaternion(0.21060373, -0.029136932, -0.04701664, 0.9760055)
bones/32/rotation = Quaternion(0.4843428, -0.49003875, -0.52383053, -0.500875)
bones/33/rotation = Quaternion(0.038510293, 0.7946593, -0.6057995, -0.0063617937)
bones/34/rotation = Quaternion(0.123212546, 0.70837134, -0.11701607, 0.685081)
bones/35/rotation = Quaternion(0.010736771, -0.6583353, 0.065903015, 0.74975747)
bones/36/rotation = Quaternion(-0.23614895, -0.7904621, -0.07787225, 0.5597672)
bones/37/rotation = Quaternion(0.24966618, 0.08179811, -0.10799041, 0.95880866)
bones/38/rotation = Quaternion(0.07591118, 0.060347762, -0.008473414, 0.99525064)
bones/40/rotation = Quaternion(0.10821362, -0.019678202, 0.042827066, 0.99300987)
bones/41/rotation = Quaternion(0.190962, 0.025181124, 0.034452885, 0.9806694)
bones/42/rotation = Quaternion(0.15327272, 0.02283969, 0.05465678, 0.9864069)
bones/44/rotation = Quaternion(0.1455758, 0.033797387, 0.061152425, 0.9868769)
bones/45/rotation = Quaternion(0.25478014, 0.026245836, 0.061935615, 0.9646566)
bones/46/rotation = Quaternion(0.1297203, 0.013807423, 0.022311838, 0.9912034)
bones/48/rotation = Quaternion(0.11611395, 0.057663795, 0.0932003, 0.9871708)
bones/49/rotation = Quaternion(0.30427176, -0.013674638, 0.062496945, 0.95043457)
bones/50/rotation = Quaternion(0.15840079, -0.01284666, 0.039450526, 0.9865029)
bones/52/rotation = Quaternion(0.17567955, 0.16002777, 0.092698105, 0.9669203)
bones/53/rotation = Quaternion(0.32082272, 0.035688665, 0.059687465, 0.9445828)
bones/54/rotation = Quaternion(0.16247582, 0.0013420888, 0.026194757, 0.9863639)
bones/56/rotation = Quaternion(0.11377297, 0.12919468, 0.9813539, -0.08549298)
bones/57/rotation = Quaternion(-0.050809726, 0.9612373, -0.2264606, 0.14885172)
bones/58/rotation = Quaternion(-0.076233365, 0.6346759, -0.7672808, 0.051528938)
bones/59/rotation = Quaternion(4.392564e-06, 0.9998717, 0.01602433, 5.581871e-08)
bones/61/rotation = Quaternion(-0.034045134, 0.015121388, 0.99877214, -0.03265935)
bones/62/rotation = Quaternion(-0.020403724, 0.982553, -0.16831654, -0.07643852)
bones/63/rotation = Quaternion(0.0032130673, 0.5861979, -0.8091593, 0.040285222)
bones/64/rotation = Quaternion(1.7273409e-06, 1, 1.4766241e-05, 3.9276433e-08)

[node name="AnimationPlayer" parent="LeoModelIndy" index="1"]
root_motion_track = NodePath("%GeneralSkeleton:Root")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9684607, 0)
shape = SubResource("CapsuleShape3D_0el0d")

[node name="AnimationMisc" type="Node3D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="AnimationMisc"]
root_node = NodePath("../../LeoModelIndy")
root_motion_track = NodePath("%GeneralSkeleton:Root")
tree_root = SubResource("AnimationNodeStateMachine_6iudy")
anim_player = NodePath("../../LeoModelIndy/AnimationPlayer")
parameters/ACTIVE/movement/blend_position = Vector2(0.0012836456, -0.0038461685)
"parameters/ACTIVE/aim os/active" = false
"parameters/ACTIVE/aim os/internal_active" = false
"parameters/ACTIVE/aim os/request" = 0
"parameters/ACTIVE/dodge os/active" = false
"parameters/ACTIVE/dodge os/internal_active" = false
"parameters/ACTIVE/dodge os/request" = 0
"parameters/ACTIVE/d_r transition/current_state" = "react"
"parameters/ACTIVE/d_r transition/transition_request" = ""
"parameters/ACTIVE/d_r transition/current_index" = 1
parameters/INACTIVE/movement/blend_position = -1.0070922
script = ExtResource("45_24667")

[node name="RootMotionView" type="RootMotionView" parent="AnimationMisc"]
animation_path = NodePath("../AnimationTree")

[node name="LimboHSM" type="LimboHSM" parent="."]

[node name="INACTIVE" type="LimboState" parent="LimboHSM"]
script = ExtResource("46_24667")

[node name="ACTIVE" type="LimboState" parent="LimboHSM"]
script = ExtResource("45_6iudy")

[node name="FALL" type="LimboState" parent="LimboHSM"]
script = ExtResource("47_6qet4")

[node name="AIM" type="LimboState" parent="LimboHSM"]
script = ExtResource("48_tl32u")

[node name="CameraManager" type="Node3D" parent="."]
script = ExtResource("8_b4kmf")

[node name="Camera3D" type="Camera3D" parent="CameraManager"]
physics_interpolation_mode = 1
transform = Transform3D(-0.9999999, 0, 0, 0, 0.93969256, 0.34202024, 0, 0.34202024, -0.9396925, 0, 3.0751014, -4.6984634)

[node name="PhantomCameraHost" type="Node" parent="CameraManager/Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("9_shd1k")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="MainCamera" type="Node3D" parent="CameraManager" node_paths=PackedStringArray("follow_target")]
transform = Transform3D(-0.9999999, 0, 0, 0, 0.93969256, 0.34202024, 0, 0.34202024, -0.9396925, 0, 3.0751014, -4.6984634)
script = ExtResource("10_5kd0c")
follow_mode = 6
follow_target = NodePath("../..")
tween_resource = SubResource("Resource_4opfx")
tween_on_load = false
camera_3d_resource = SubResource("Resource_5kd0c")
follow_offset = Vector3(0, 1.365, 0)
follow_distance = 5.0
vertical_rotation_offset = 2.792526803190927
spring_length = 5.0
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[editable path="LeoModelIndy"]
